target-demo/infra/target-demo/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: target-demo
spec:
  ports:
    - name: http
      port: 80
  selector:
    role: target-demo
