target-demo/infra/target-demo/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: target-demo
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # kubernetes.io/tls-acme: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: target-ai.spinachsoftware.com
      http:
        paths:
          - backend:
              service:
                name: target-demo
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - "target-ai.spinachsoftware.com"
      secretName: target-ai.spinachsoftware.com
